# Skillbox_Search_Engine

./: .gitignore  CMakeLists.txt  README.md
include/: ConverterJSON.h  InvertedIndex.h  SearchServer.h
resources/: answers.json  config.json
src/: ConverterJSON.cpp  InvertedIndex.cpp  SearchServer.cpp  main.cpp
tests/: InvertedIndex_test.cpp  SearchServer_test.cpp
